# ssh_manager

./: .gitattributes  .gitignore  README.md  func.template  main.py  pyproject.toml  requirements.txt  routing.py  setup.py  shell.py
.github/ISSUE_TEMPLATE/: report-an-invalid-or-unexpected-behavior.md  suggest-something-new.md
.github/actions/get_version/: action.yml
.github/actions/set_version/: action.yml
.github/actions/setup_environment/: action.yml
.github/workflows/: create_release.yml  gh_actions_checks.yml  python_checks.yml  run_checks.yml
ssh_manager/: cli.py  connection.py  exception_handlers.py  main.py  parse_args.py  routing.py  runtime_exceptions.py  shell.py  tmux.py
ssh_manager/stored/: __init__.py  append.py  modify.py  read.py  store_path.py
stored/: append.py  read.py  store_path.py
